--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,23 @@
   text-align: center;
 }
 
-.app-form{
+.content-form{
   display: flex;
+}
+
+.content{
+  display: flex;
+  grid-gap: 10px;
+}
+
+.content-display-column{
+  flex-direction: column;
+}
+
+.content__margin-left{
   margin-left: 15px;
 }
 
-.age-output{
-  margin-left: 15px;
-  margin-top: 15px;
+.form-error{
+  color: red;
 }
